--- a/megapod/index.html
+++ b/megapod/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="Megapod, unica, creative, html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Megapod | Template</title>
+    <title>Megapod</title>
 
     <!-- Google Font -->
     <link
@@ -64,7 +64,7 @@
               <ul>
                 <li class="active"><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li><a href="./episodes.html">Episodes</a></li>
+                <li><a href="./episodes.html">Podcast:Spectrum Insight</a></li>
                 <!-- <li>
                   <a href="#">Pages</a>
                   <ul class="dropdown">
@@ -216,7 +216,7 @@
         <div class="podcast__top">
           <div class="row">
             <div class="col-lg-5 col-md-5">
-              <h2>Podcast Section</h2>
+              <h2>Spectrum Insight</h2>
             </div>
             <div class="col-lg-7 col-md-7">
               <ul class="filter__controls">
@@ -247,12 +247,12 @@
                 <h4>
                   Episode 01: Affirmative Action Episode
                 </h4>
-                <p>
+                <!-- <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
                   maecenas accumsan lacus vel facilisis.
-                </p>
+                </p> -->
                 <div class="track__option">
                   <div
                     class="jp-jplayer jplayer"
@@ -310,10 +310,10 @@
                         </div>
                       </div>
                     </div>
-                    <div class="jp-btns">
+                    <!-- <div class="jp-btns">
                       <a href="#"><i class="social_share"></i> Share</a>
                       <a href="#"><i class="fa fa-download"></i> Download</a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -336,12 +336,12 @@
                 <h4>
                   Episode 02: Puberty Blockers
                 </h4>
-                <p>
+                <!-- <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
                   maecenas accumsan lacus vel facilisis.
-                </p>
+                </p> -->
                 <div class="track__option">
                   <div
                     class="jp-jplayer jplayer"
@@ -399,10 +399,10 @@
                         </div>
                       </div>
                     </div>
-                    <div class="jp-btns">
+                    <!-- <div class="jp-btns">
                       <a href="#"><i class="social_share"></i> Share</a>
                       <a href="#"><i class="fa fa-download"></i> Download</a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
