--- a/megapod/episodes.html
+++ b/megapod/episodes.html
@@ -65,7 +65,7 @@
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./about.html">About</a></li>
-                <li class="active"><a href="./episodes.html">Episodes</a></li>
+                <li class="active"><a href="./episodes.html">Spectrum Insight</a></li>
                 <!-- <li>
                   <a href="#">Pages</a>
                   <ul class="dropdown">
@@ -113,8 +113,8 @@
             <div class="breadcrumb__text">
               <h2>Episodes</h2>
               <div class="breadcrumb__links">
-                <a href="#"><i class="fa fa-home"></i> Home</a>
-                <span>Podcasts</span>
+                <a href="index.html"><i class="fa fa-home"></i> Home</a>
+                <span>Spectrum Insight</span>
               </div>
             </div>
           </div>
@@ -211,7 +211,7 @@
         <div class="podcast__top">
           <div class="row">
             <div class="col-lg-5 col-md-5">
-              <h2>Live & Upcoming</h2>
+              <h2>Spectrum Insight</h2>
             </div>
             <div class="col-lg-7 col-md-7">
               <ul class="filter__controls">
@@ -242,12 +242,12 @@
                 <h4>
                   Episode 01: Affirmative Action Episode
                 </h4>
-                <p>
+                <!-- <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
                   maecenas accumsan lacus vel facilisis.
-                </p>
+                </p> -->
                 <div class="track__option">
                   <div
                     class="jp-jplayer jplayer"
@@ -305,10 +305,10 @@
                         </div>
                       </div>
                     </div>
-                    <div class="jp-btns">
+                    <!-- <div class="jp-btns">
                       <a href="#"><i class="social_share"></i> Share</a>
                       <a href="#"><i class="fa fa-download"></i> Download</a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
@@ -331,17 +331,17 @@
                 <h4>
                   Episode 02: Puberty Blockers
                 </h4>
-                <p>
+                <!-- <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                   Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
                   maecenas accumsan lacus vel facilisis.
-                </p>
+                </p> -->
                 <div class="track__option">
                   <div
                     class="jp-jplayer jplayer"
                     data-ancestor=".jp_container-2"
-                    data-url="music-files/4.mp3"
+                    data-url="music-files\Puberty Blockers.mp3"
                   ></div>
                   <div
                     class="jp-audio jp_container-2"
@@ -394,10 +394,10 @@
                         </div>
                       </div>
                     </div>
-                    <div class="jp-btns">
+                    <!-- <div class="jp-btns">
                       <a href="#"><i class="social_share"></i> Share</a>
                       <a href="#"><i class="fa fa-download"></i> Download</a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
