--- a/megapod/index.html
+++ b/megapod/index.html
@@ -495,7 +495,7 @@
     <!-- Podcast Section End -->
 
     <!-- Call To Action Section Begin -->
-    <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
+    <!-- <section class="callto spad set-bg" data-setbg="img/call-bg.jpg">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -507,7 +507,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Call To Action Section End -->
 
     <!-- Episodes Section Begin -->
