--- a/megapod/about.html
+++ b/megapod/about.html
@@ -65,7 +65,7 @@
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li class="active"><a href="./about.html">About</a></li>
-                <li><a href="./episodes.html">Episodes</a></li>
+                <li><a href="./episodes.html">Spectrum Insight</a></li>
                 <!-- <li>
                   <a href="#">Pages</a>
                   <ul class="dropdown">
@@ -176,7 +176,7 @@
     </section>
     <!-- About Section End -->
 
-    <!-- Call To Action Section Begin -->
+    <!-- Call To Action Section Begin
     <section class="callto spad set-bg" data-setbg="img/call-about-bg.jpg">
       <div class="container">
         <div class="row">
@@ -189,7 +189,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Call To Action Section End -->
 
     <!-- Team Section Begin -->
