--- a/megapod/episodes.html
+++ b/megapod/episodes.html
@@ -218,13 +218,14 @@
                 <li class="active" data-filter="*">All</li>
                 <li data-filter=".entrepreneurship">Episode 1</li>
                 <li data-filter=".media">Episode 2</li>
-                <!-- <li data-filter=".tech">Tech</li>
-                <li data-filter=".tutorials">Tutorials</li> -->
+                <li data-filter=".tech">Episode 3</li>
+                <li data-filter=".tutorials">Episode 4</li>
               </ul>
             </div>
           </div>
         </div>
         <div class="row podcast-filter">
+         
           <div class="col-lg-12 mix entrepreneurship">
             <div class="podcast__item">
               <div class="podcast__item__pic">
@@ -233,7 +234,7 @@
               <div class="podcast__item__text">
                 <a href="#" class="heart-icon"><i class="fa fa-heart"></i></a>
                 <ul>
-                  <li><span class="icon_calendar"></span> 23 Oct 2023</li>
+                  <li><span class="icon_calendar"></span> 24 Oct 2023</li>
                   <li><span class="icon_profile"></span> by Victor Ji</li>
                   <li>
                     <span class="icon_tags_alt"></span> Radio, Musican, Camp
@@ -322,8 +323,8 @@
               <div class="podcast__item__text">
                 <a href="#" class="heart-icon"><i class="fa fa-heart"></i></a>
                 <ul>
-                  <li><span class="icon_calendar"></span> 24 Oct 2023</li>
-                  <li><span class="icon_profile"></span> by Victor Ji</li>
+                  <li><span class="icon_calendar"></span> 22 Oct 2023</li>
+                  <li><span class="icon_profile"></span> by Victor ji</li>
                   <li>
                     <span class="icon_tags_alt"></span> Radio, Musican, Camp
                   </li>
@@ -403,6 +404,173 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-12 mix tech">
+            <div class="podcast__item">
+              <div class="podcast__item__pic">
+                <img src="img/podcast/podcast-3.jpg" alt="" />
+              </div>
+              <div class="podcast__item__text">
+                <a href="#" class="heart-icon"><i class="fa fa-heart"></i></a>
+                <ul>
+                  <li><span class="icon_calendar"></span> 4 Nov 2023</li>
+                  <li><span class="icon_profile"></span> by Victor Ji</li>
+                  <li>
+                    <span class="icon_tags_alt"></span> Radio, Musican, Camp
+                  </li>
+                </ul>
+                <h4>
+                  Episode 03: Free Speech & The First Admendment
+                </h4>
+                <!-- <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                  maecenas accumsan lacus vel facilisis.
+                </p> -->
+                <div class="track__option">
+                  <div
+                    class="jp-jplayer jplayer"
+                    data-ancestor=".jp_container-3"
+                    data-url="music-files\Affirmative Action Episode.mp3"
+                  ></div>
+                  <div
+                    class="jp-audio jp_container-3"
+                    role="application"
+                    aria-label="media player"
+                  >
+                  <div class="jp-gui jp-interface">
+                    <!-- Player Controls -->
+                    <div class="player_controls_box">
+                      <button
+                        class="jp-play player_button"
+                        tabindex="0"
+                      ></button>
+                    </div>
+                    <!-- Progress Bar -->
+                    <div class="player_bars">
+                      <div class="jp-progress">
+                        <div class="jp-seek-bar">
+                          <div>
+                            <div class="jp-play-bar">
+                              <div
+                                class="jp-current-time"
+                                role="timer"
+                                aria-label="time"
+                              >
+                                0:00
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div
+                        class="jp-duration ml-auto"
+                        role="timer"
+                        aria-label="duration"
+                      >
+                        00:00
+                      </div>
+                    </div>
+                    <!-- Volume Controls -->
+                    <div class="jp-volume-controls">
+                      <button class="jp-mute" tabindex="0">
+                        <span class="icon_volume-high"></span>
+                      </button>
+                      <div class="jp-volume-bar">
+                        <div
+                          class="jp-volume-bar-value"
+                          style="width: 0%"
+                        ></div>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  </div>
+                </div>
+                  </div></div>
+                  <div class="col-lg-12 mix tutorials">
+                    <div class="podcast__item">
+                      <div class="podcast__item__pic">
+                        <img src="img\podcast\podcast-4.jpg" alt="" />
+                      </div>
+                      <div class="podcast__item__text">
+                        <a href="#" class="heart-icon"><i class="fa fa-heart"></i></a>
+                        <ul>
+                          <li><span class="icon_calendar"></span> 4 Nov 2023</li>
+                          <li><span class="icon_profile"></span> by Victor Ji</li>
+                          <li>
+                            <span class="icon_tags_alt"></span> Radio, Musican, Camp
+                          </li>
+                        </ul>
+                        <h4>
+                          Episode 04:Has Soft on Crime Policies Worked?
+                        </h4>
+                <!-- <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Quis ipsum suspendisse ultrices gravida. Risus commodo viverra
+                  maecenas accumsan lacus vel facilisis.
+                </p> -->
+                <div class="track__option">
+                  <div
+                    class="jp-jplayer jplayer"
+                    data-ancestor=".jp_container-4"
+                    data-url="music-files\Affirmative Action Episode.mp3"
+                  ></div>
+                  <div
+                    class="jp-audio jp_container-1"
+                    role="application"
+                    aria-label="media player"
+                  >
+                    <div class="jp-gui jp-interface">
+                    <!-- Player Controls -->
+                    <div class="player_controls_box">
+                      <button
+                        class="jp-play player_button"
+                        tabindex="0"
+                      ></button>
+                    </div>
+                    <!-- Progress Bar -->
+                    <div class="player_bars">
+                      <div class="jp-progress">
+                        <div class="jp-seek-bar">
+                          <div>
+                            <div class="jp-play-bar">
+                              <div
+                                class="jp-current-time"
+                                role="timer"
+                                aria-label="time"
+                              >
+                                0:00
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <div
+                        class="jp-duration ml-auto"
+                        role="timer"
+                        aria-label="duration"
+                      >
+                        00:00
+                      </div>
+                    </div>
+                    <!-- Volume Controls -->
+                    <div class="jp-volume-controls">
+                      <button class="jp-mute" tabindex="0">
+                        <span class="icon_volume-high"></span>
+                      </button>
+                      <div class="jp-volume-bar">
+                        <div
+                          class="jp-volume-bar-value"
+                          style="width: 0%"
+                        ></div>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  </div>
+                </div>
         </section>
     <!-- Podcast Section End -->
  <!-- Footer Section Begin -->
