--- a/megapod/about.html
+++ b/megapod/about.html
@@ -129,7 +129,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="about__text">
-              <span>We Are Meeapod</span>
+              <span>We Are MegaPod</span>
               <h2>About Us</h2>
               <p>Enjoy listening to our podcast? Consider making a donation!</p>
               <!-- <a href="#" class="primary-btn">Make A Donation</a> -->
